[package]
name = "test_wifi_port_scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-native-tls = "0.3"
native-tls = "0.2"
x509-parser = "0.15"
futures = "0.3.31"

